# ipkg

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  entry_point.py  index.html  mkdocs.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  ci.yaml
ipkg/: __main__.py  log.py
ipkg/cmd/: install.py  list.py  load.py  post_install.py  remove.py  shell_env.py  unload.py
ipkg/pkg/: __init__.py
ipkg/pkg/android_studio/: install.py  post_install.py  remove.py
ipkg/pkg/brew/: install.py
ipkg/pkg/cfw/: install.py  remove.py
ipkg/pkg/code/: __init__.py  install.py
ipkg/pkg/conda/: __init__.py  install.py  load.py  remove.py
ipkg/pkg/docker/: install.py
ipkg/pkg/edge/: install.py
ipkg/pkg/fonts/: install.py  remove.py
ipkg/pkg/gh/: post_install.py
ipkg/pkg/llvm/: load.py  unload.py
ipkg/pkg/motrix/: install.py  remove.py
ipkg/pkg/obs/: install.py
ipkg/pkg/reserves_lib_tsinghua_downloader/: install.py
ipkg/pkg/typora/: install.py
ipkg/pkg/virtualbox/: install.py
ipkg/pkg/zotero/: install.py  remove.py
ipkg/utils/: cache.py  extract.py
scripts/: build.sh  format.sh  install.sh  wrap.sh
search/: search_index.json
