[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ipkg"
version = "0.0.0"
description = "My Package Manager"
authors = ["Qin Li <liblaf@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
rich = "^12.6.0"
click = "^8.1.3"
httpie = "^3.2.1"
questionary = "^1.10.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"
